# LensDesigner

./: .gitignore  CMakeLists.txt  README.md  core.cpp
src/: main.cpp  testbed.cpp
src/behaviour/: transfer_funcs.cpp  transfer_funcs.hpp
src/coord/: simobj.cpp  simobj.hpp  vector.cpp  vector.hpp
src/coords/: simobj.hpp  vector.hpp
src/curve/: curves.cpp  curves.hpp  geometry.cpp  geometry.hpp  hyperbolic_curve.cpp  hyperbolic_curve.hpp
src/element/: aperture.cpp  aperture.hpp  combination.hpp  group.cpp  group.hpp  surface.cpp  surface.hpp
src/elements/: aperture.cpp  aperture.hpp  surface.cpp  surface.hpp
src/light/: ray.cpp  ray.hpp
src/material/: materials.cpp  materials.hpp  pmma.cpp
src/materials/: pmma.cpp  pmma.hpp
src/system/: system.cpp  system.hpp
